# sdwan

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_zh.md  Cargo.toml  pnpm-lock.yaml
.github/workflows/: Dockerfile  core.yml  docker.yml  gui.yml  install_rust.sh  mobile.yml  ohos.yml  release.yml  test.yml
easytier/: Cargo.toml  build.rs
easytier-contrib/easytier-ffi/: Cargo.toml
easytier-contrib/easytier-ffi/src/: lib.rs
easytier-contrib/easytier-magisk/: build.sh  easytier_core.sh  module.prop
easytier-contrib/easytier-magisk/config/: config.toml
easytier-contrib/easytier-ohrs/: Cargo.toml
easytier-contrib/easytier-ohrs/src/: lib.rs
easytier-contrib/easytier-uptime/: Cargo.toml  test-integration.sh
easytier-contrib/easytier-uptime/src/: health_checker.rs
easytier-gui/: package.json  test-import.ts  tsconfig.json
easytier-gui/src/: App.vue  main.ts
easytier-gui/src-tauri/: Cargo.toml  mobile.toml  tauri.conf.json
easytier-gui/src-tauri/src/: lib.rs
easytier-gui/src/components/: About.vue
easytier-gui/src/composables/: mobile_vpn.ts  network.ts
easytier-gui/src/pages/: index.vue
easytier-rpc-build/: Cargo.toml
easytier-rpc-build/src/: lib.rs
easytier-web/: Cargo.toml
easytier-web/frontend/: index.html  package.json
easytier-web/frontend-lib/: package.json  tsconfig.app.json  vite.config.ts
easytier-web/locales/: app.yml
easytier-web/src/: main.rs
easytier/locales/: app.yml
easytier/src/: launcher.rs  lib.rs  sdwan-cli.rs  sdwan-core.rs  utils.rs
script/: install.cmd  install.cmd.bak  install.sh
(+54 files in other folders)
