[package]
name = "sdwan-rpc-build"
description = "Protobuf RPC Service Generator for EasyTier"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/zzxym/sdwan"
repository = "https://github.com/zzxym/sdwan"
authors = ["kkrainbow"]
keywords = ["vpn", "p2p", "network", "easytier"]
categories = ["network-programming", "command-line-utilities"]
rust-version = "1.89.0"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
heck = "0.5"
prost-build = "0.13"

[features]
default = []
internal-namespace = []
